--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
 			<version>3.1.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>0.12</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
